--- a/akb_flask_app/pyproject.toml
+++ b/akb_flask_app/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "flask>=3.1.2",
+    "flask-cors>=6.0.1",
     "requests>=2.32.5",
 ]
